(executable
 (public_name proj)
 (name main)
 (libraries proj dream mssql))

(rule
 (targets pages.ml)
 (deps pages.eml.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))

(rule
 (targets templates.ml)
 (deps templates.eml.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
